syntax = "proto3";
package qcm;

message Library {
    int64 library_id = 1;
    string name = 2;
    int64 provider_id = 3;
    string native_id = 4;
}

message Album {
    int64 item_id = 1;
    int64 library_id = 2;
    string name = 3;
    string pic_url = 4;
    string publish_time = 5;
    int32 track_count = 6;
    string description = 7;
    string company = 8;
    string album_type = 9;
}

message Artist {
    int64 item_id = 1;
    int64 library_id = 2;
    string name = 3;
    string pic_url = 4;
    string description = 5;
    int32 album_count = 6;
    int32 music_count = 7;
    repeated string alias = 8;
}

message Mix {
    int64 item_id = 1;
    int64 library_id = 2;
    string name = 3;
    string pic_url = 4;
    int32 track_count = 5;
    int32 special_type = 6;
    string description = 7;
    string create_time = 8;
    string update_time = 9;
    int32 play_count = 10;
    int64 user_id = 11;
    repeated string tags = 12;
}

message Request {
    int64 library_id = 1;
    string request_type = 2;
}

message Response {
    repeated Album albums = 1;
    repeated Artist artists = 2;
    repeated Mix mixes = 3;
    optional Library library = 4;
}
